; ModuleID = '/home/carl/AnghaBench/sway/swaybar/extr_bar.c_display_in.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/extr_bar.c_display_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16, i8*)* @display_in to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @display_in(i32 %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  %7 = alloca %struct.swaybar*, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.swaybar*
  store %struct.swaybar* %9, %struct.swaybar** %7, align 8
  %10 = load %struct.swaybar*, %struct.swaybar** %7, align 8
  %11 = getelementptr inbounds %struct.swaybar, %struct.swaybar* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @wl_display_dispatch(i32 %12)
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load %struct.swaybar*, %struct.swaybar** %7, align 8
  %17 = getelementptr inbounds %struct.swaybar, %struct.swaybar* %16, i32 0, i32 0
  store i32 0, i32* %17, align 4
  br label %18

18:                                               ; preds = %15, %3
  ret void
}

declare dso_local i32 @wl_display_dispatch(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
